# vamana

./: .gitignore  CMakeLists.txt  LOCKING_IMPLEMENTATION_SUMMARY.md  Makefile  PARALLEL_OPTIMIZATION_PLAN.md  README.md  config.mk  what_am_i_doing.md
apps/: README.md  build_memory_index.cpp  search_memory_index.cpp
apps/utils/: compute_groundtruth.cpp  fvecs_to_fbin.cpp  ivecs_to_ibin.cpp
docs/: code_analysis.md  download_datasets.md  formats.md  parallelization_strategy.md  parameters.md  performance.md  sift_tutorial.md
include/: vamana.hpp
include/vamana/core/: distance.h  graph.h  index.h  io.h  neighbor.h  neighbors.h  scratch.h  types.h
scripts/: download_datasets.sh
src/: main.cpp
src/core/: distance.cpp  graph.cpp  index.cpp  io.cpp  neighbor.cpp  scratch.cpp
test/: CMakeLists.txt  integration_tests.cpp  test_distance.cpp  test_graph.cpp  test_index.cpp  test_neighbor.cpp  test_scratch.cpp
